# linux-assistant

./: .dockerignore  .gitignore  Dockerfile  PKGBUILD  README.md  linux-assistant.service  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
src/: config.py  main.py  requirements.txt  wake_word.py
src/assistant/: assistant.py  engine.py  requirements.txt  tools.py
src/gui/: window.py
src/services/: __init__.py  audio.py  llm.py
src/test/: test_audio.py  test_config.py  test_llm.py
src/workers/: __init__.py  assistant_thread.py
